Feat/backend: mail service (#21)
* update .gitignore

* Config webflux for gateway & reconfig CORS

* gReconfig cors gateway

* --amend

* Config nginx for websocket

* Set prefix for avatar & change get members api

* Send media message & query repliable message

* Docker compose auto restart services

* Resolve path

* Add cloud config

* Config apache james & add send mail api

* Add module-james & sync domain, user from mvg-sky-backend to apache-james

* Fetch email from apache james

* Add module-james to buid.sh

* Update jmx url

* config mail service in docker compose

* Temp: network_mode host for quick fix

* Mount volume for mail service

* add /api/mailboxes/** to gateway

* Add /api/chats-resources/** to gateway

* Fix bugs: sorted in parallel stream

* Remote access apache james jmx

* Update apache-james configurations

* Update apache-james-conf/README.md

* Change username in account is an email

* Create mailbox sent